--- a/wwwroot/MainPage.html
+++ b/wwwroot/MainPage.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
-    <h1>Your token is here, @User.Identity.Name:</h1>
-    <p id="token"> @ViewData["token"]</p>
-    <h2>Be aware that this will expire in a day.</h2>
+    <h2>Welcome to definitely-not-Trello!</h2>
+    <p>This is a tool for managing tasks, alone or in groups.</p>
+    <a href="~/signUp.html">Sign up</a>
+    <a href="/login.html">log in</a>
 </body>
 </html>
-
