--- a/wwwroot/MainPage.html
+++ b/wwwroot/MainPage.html
@@ -8,7 +8,7 @@
 <body>
     <h2>Welcome to definitely-not-Trello!</h2>
     <p>This is a tool for managing tasks, alone or in groups.</p>
-    <a href="~/signUp.html">Sign up</a>
+    <a href="/signUp.html">Sign up</a>
     <a href="/login.html">log in</a>
 </body>
 </html>
